import "client.comm.proto";
import "client.role_attr_msg.proto";
import "client.role_props.proto";
import "client.role_skill_msg.proto";
import "client.role_potential.proto";
//import "client.operate_pet.proto";
package client;

enum CLIENT_QUERY_TYPE_E {
    CQTE_SMY              = 1; // 查询用户摘要信息,需要填写请求中的role_ids
    CQTE_ROLE_ATTR        = 2; // 查询人物
    CQTE_ROLE_MOUNT       = 3; // 查询坐骑
    CQTE_ROLE_PET         = 4; // 查询美人
    CQTE_SMY_BY_NAME      = 5;
    CQTE_ROLE_POTENTIAL   = 6; // 查询心法
    CQTE_ROLE_AIRCRAFT    = 7;
	CQTE_ROLE_BOW         = 8; // 查询弓箭
	CQTE_ROLE_GEM		  = 9; // 查询宝石
}

// 查询用户信息请求
message query_req {
    required CLIENT_QUERY_TYPE_E type = 1;    // 查询类型
    repeated uint32 role_ids          = 2;    // 要查询的角色ID集合
    repeated string role_names        = 3;    // 要查询的角色名字
	optional uint32 opt_flag		  = 4;	  // 操作标识
    optional server_head svr_head     = 1000; // 服务端填写项，客户端不需要关心也不必填写数据 
}

// 用户最常用的摘要信息
message role_smy_info {
    required uint32 role_id    = 1;
    required string role_name  = 2; // 角色名字
    required uint32 fight_power = 3; // 角色战斗力
    required uint32 profession = 4; // 角色的职业
    optional bool   online     = 5; // 是否在线
    optional uint32 level      = 6; // 等级
	optional uint32 family_id  = 7; // 军团ID
	optional string family_name = 8; // 军团名字
	optional uint32 family_postion = 9; // 军团职位
	optional uint32 vip_level   = 10; // vip等级
	optional uint32 mount_level = 11; // 坐骑等级
	optional uint32 mount_power = 12; // 坐骑战斗力
	optional uint32 weapon_id	= 13; // 衣服ID
	optional uint32 armor_id    = 14; // 武器ID
}

enum UPDATE_TYPE_E {
	SMY_ROLE_LEVEL					= 1;		// 玩家等级
	SMY_ROLE_FIGHT_POWER			= 2;		// 玩家战斗力
	SMY_MOUNT_DATA					= 3;		// 坐骑数据
	SMY_ROLE_VIP					= 4;		// 玩家VIP
	SMY_ROLE_WEAPON_ID				= 5;        // 玩家武器ID
	SMY_ROLE_ARMOR_ID               = 6;        // 玩家衣服ID
}

message update_smy_role_lvl {
    required uint32 role_id = 1;
    required uint32 level   = 2;
}

message update_smy_role_fight_power {
    required uint32 role_id = 1;
    required uint32 fight_power   = 2;
}

message update_smy_mount_data {
	required uint32 role_id = 1;
	required uint32 mount_level = 2;
	required uint32 mount_power = 3;
}

message update_smy_info {
	required UPDATE_TYPE_E type = 1;
	optional uint32 role_id = 2;
	optional uint32 val1 = 3;
	optional uint32 val2 = 4;
}

///////////////////////////////用户查询信息///////////////////////////
enum OPEN_TYPE_E{
	ROLE_MOUNT      = 0x00000001;
	ROLE_PET        = 0x00000002;
	ROLE_POTENTIAL  = 0x00000004;
	ROLE_BOW		= 0x00000008;
	ROLE_GEM        = 0x00000010;
}
// 人物
message role_query_info {
	required uint32 role_id            = 1;   // 角色ID
    required string role_name          = 2;   // 角色名字
    required uint32 fight_power        = 3;   // 角色战斗力
    required uint32 profession         = 4;   // 角色的职业
	optional uint32 level              = 5;   // 角色的等级
	optional uint32 weapon_id	       = 6;   // 武器ID（外观）
	optional uint32 armor_id           = 7;   // 衣服ID（外观）
	optional uint32 vip_level          = 8;   // vip等级
	optional uint32 family_id          = 9;   // 军团ID
	optional string family_name        = 10;  // 军团名字
	optional uint32 family_position    = 11;  // 军团职位
	repeated props_info equip_info     = 12;  // 装备数据（1~6格子）
	optional uint32 open_type		   = 13;  // 功能开放的标记
}

// 坐骑
message mount_query_info {
	optional uint32 mount_id    = 1; // 坐骑ID
	optional uint32 mount_level = 2; // 坐骑等级
	optional uint32 mount_power = 3; // 坐骑战力
}

// 美人
message pet_query_info {
	optional uint32         pet_id        = 1; // 美人ID
	optional uint32         pet_level     = 2; // 美人的等级
	optional uint32         magic_star    = 3; // 美人神兵的星数
	optional uint32			move_speed    = 4; // 美人的移动速度
	repeated skill_data	    skill_info    = 5; // 美人的技能数据
	repeated props_info     equip_info    = 6; // 装备数据
}

// 心法
message potential_query_info {
	repeated client_point_info point_info	= 1; // 穴位数据
}

// 弓箭
message bows_query_info {
	optional uint32 bow_id    = 1; // 弓箭ID
	optional uint32 bow_level = 2; // 弓箭等级
	optional uint32 bow_power = 3; // 弓箭战力
}

// 宝石
message gem_query_info {
	optional uint32 total_level = 1;
	optional uint32 power		= 2;
}
////////////////////////////////////////////////
// 查询用户信息返回
message query_rsp {
    required CLIENT_QUERY_TYPE_E type             = 1; // 查询类型
	optional uint32				 opt_flag         = 2; // 操作标识
	optional uint32				 role_id          = 3; // 角色ID
    repeated role_smy_info       rsi              = 4; // 用户摘要信息
	repeated role_query_info	 role_info        = 5; // 人物
	optional mount_query_info    mount_info       = 6; // 坐骑
	optional pet_query_info		 pet_info         = 7; // 美人
	repeated potential_query_info  potential_info = 8; // 心法
	optional bows_query_info	 bow_info		  = 9; // 弓箭
	optional gem_query_info		 gem_info		  = 10;// 宝石
}

message game_to_center_query {
	required uint32 role_id      = 1;
	required uint32 query_id     = 2;
	optional query_rsp   query_info    = 3;
}